--- a/Client/package.json
+++ b/Client/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-router": "^6.21.3",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "uniqid": "^5.4.0",
     "uuid": "^9.0.1"
   },
