--- a/Client/package.json
+++ b/Client/package.json
@@ -23,7 +23,8 @@
     "react-router": "^6.21.3",
     "react-router-dom": "^6.22.0",
     "uniqid": "^5.4.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
