--- a/Client/package.json
+++ b/Client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run dev"
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.10",
@@ -16,9 +17,11 @@
     "@fullcalendar/timegrid": "^6.1.10",
     "firebase": "^10.8.0",
     "force": "^0.0.3",
+    "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-router": "^6.21.3",
     "react-router-dom": "^6.22.0",
