--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
+    "nodemon": "^3.1.0",
     "qrcode-terminal": "^0.12.0",
     "twilio": "^4.21.0",
     "whatsapp-web.js": "^1.23.0"
+  },
+  "scripts": {
+    "build": "cd Client && npm run build",
+    "dev": "npm run build && nodemon ./Server/server.js",
+    "start": "npm run dev && node ./Server/server.js"
   }
 }
