--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "whatsapp-web.js": "^1.23.0"
   },
   "scripts": {
-    "build": "cd Client && npm run build",
+    "build": "cd Client && npm install && npm run build",
     "dev": "npm run build && nodemon ./Server/server.js",
     "start": "npm run build && node ./Server/server.js"
   }
