--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.1",
     "node-schedule": "^2.1.1",
+    "nodemon": "^3.1.0",
     "uniqid": "^5.4.0"
   },
   "keywords": [],
