--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "scripts": {
     "build": "cd Client && npm install && npm run build",
     "dev": "npm run build && node --watch ./Server/server.js",
-    "start": "npm run build && node --watch ./Server/server.js"
+    "start": "npm run build && node ./Server/server.js"
   }
 }
