--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "cd Client && npm install && npm run build",
-    "dev": "npm run build && node --watch ./Server/server.js",
+    "dev": "npm run build && nodemon ./Server/server.js",
     "start": "npm run build && node ./Server/server.js"
   }
 }
