changes in packet.json files

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd Server && npm install && npm start",
     "client": "cd Client && npm install && npm run dev",
-    "build": "cd Client && npm install && npm run build && cd Server && npm install && npm run build",
+    "build": "cd Client && npm install && npm run build && cd ../Server && npm install && npm run build",
     "start": "npm run dev"
   }
 }
