--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "concurrently": "^8.2.2",
     "firebase": "^10.8.0",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
