--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "concurrently": "^8.2.2",
     "firebase": "^10.8.0",
     "force": "^0.0.3",
     "i18next": "^23.10.1",
