--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "whatsapp-web.js": "^1.23.0"
   },
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "npm run server && npm run client",
     "server": "cd Server && npm start",
     "client": "cd Client && npm run dev",
     "build": "cd Client && npm install && npm run build",
