--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "whatsapp-web.js": "^1.23.0"
   },
   "scripts": {
-    "dev": "npm run server && npm run client",
+    "dev": "npm-run-all --parallel server client",
     "server": "cd Server && npm start",
     "client": "cd Client && npm run dev",
     "build": "cd Client && npm install && npm run build",
     "start": "npm run dev"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
