changes: change in packet.json file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel server client",
     "server": "cd Server && npm start",
-    "client": "cd Client && npm run dev",
+    "client": "cd Client && npm install && npm run dev",
     "build": "cd Client && npm install && npm run build",
     "start": "npm run dev"
   },
