--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.8.0",
     "force": "^0.0.3",
     "i18next": "^23.10.1",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
