--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "whatsapp-web.js": "^1.23.0"
   },
   "scripts": {
-    "dev": "npm-run-all --parallel server client",
-    "server": "cd Server && node server.js",
-    "client": "cd Client && npm install && npm run dev",
-    "build": "cd Client && npm install && npm run build",
-    "start": "npm run dev"
+    "start:client": "cd Client && npm start",
+    "start:server": "cd Server && node server.js", 
+    "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
+    "build": "npm run build:client && npm run build:server"
   }
 }
