--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "scripts": {
     "start:client": "cd Client && npm start",
-    "start:server": "cd Server && node server.js", 
-    "start": "concurrently \"npm run start:Client\" \"npm run start:server\"",
-    "build": "npm run build:Client && npm run build:server"
+    "build:client": "cd Client && npm run build",
+    "start:server": "cd Server && node server.js",
+    "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
+    "build": "npm run build:client && npm run build:server"
   }
 }
