--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start:client": "cd Client && npm start",
-    "build:client": "cd Client && npm run build",
+    "build:client": "cd Client && npm install && npm run build",
     "start:server": "cd Server && node server.js",
     "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
     "build": "npm run build:client && npm run build:server"
