change: change packet.json file

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "build:client": "cd Client && npm install && npm run build",
     "start:server": "cd Server && node server.js",
     "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
-    "build": "npm run build:client && npm run build:server"
+    "build": "npm run build:client"
   }
 }
