--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "concurrently": "^8.2.2",
     "firebase": "^10.8.0",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
@@ -17,5 +16,8 @@
     "start:server": "cd Server && node server.js",
     "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
     "build": "npm run build:client"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
